--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
 </nav>
 
     <!-- Main Content -->
-    !-- Page Header -->
+    <!-- Page Header -->
 <!-- Set your background image for this header in the theme's configuration: index_cover -->
 <header class="intro-header" style="background-image: url('http://www.codeblocq.com/assets/projects/hexo-theme-clean-blog/img/home-bg.jpg')">
     <div class="container">
